--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+    <script src="MigrosBase.js"></script>
+    <script src="Customer.js"></script>
+    <script src="Main.js"></script>
 </body>
 
 </html>
